--- a/ClientApp/notificationCross/notificationCross/notificationCross.iOS/Main.storyboard
+++ b/ClientApp/notificationCross/notificationCross/notificationCross.iOS/Main.storyboard
@@ -1,25 +1,122 @@
-﻿<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
-	<dependencies>
-		<plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204" />
-	</dependencies>
-	<scenes>
-		<!--View Controller-->
-		<scene sceneID="tne-QT-ifu">
-			<objects>
-				<viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-					<layoutGuides>
-						<viewControllerLayoutGuide type="top" id="y3c-jy-aDJ" />
-						<viewControllerLayoutGuide type="bottom" id="wfy-db-euE" />
-					</layoutGuides>
-					<view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-						<rect key="frame" x="0.0" y="0.0" width="600" height="600" />
-						<autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" />
-						<color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite" />
-					</view>
-				</viewController>
-				<placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder" />
-			</objects>
-		</scene>
-	</scenes>
+    <dependencies>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+    </dependencies>
+    <scenes>
+        <!--View Controller-->
+        <scene sceneID="tne-QT-ifu">
+            <objects>
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
+                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="3" translatesAutoresizingMaskIntoConstraints="NO" placeholderIntrinsicWidth="120" placeholderIntrinsicHeight="infinite" misplaced="YES">
+                                <rect key="frame" x="256" y="308" width="120" height="30"/>
+                                <size key="titleShadowOffset" width="-1" height="0"/>
+                                <color key="backgroundColor" colorSpace="calibratedWhite" white="0.333333333333333" alpha="1"/>
+                                <state key="normal" title="1">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="6" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
+                                <rect key="frame" x="256" y="346" width="120" height="30"/>
+                                <size key="titleShadowOffset" width="-1" height="0"/>
+                                <color key="backgroundColor" colorSpace="calibratedWhite" white="0.333333333333333" alpha="1"/>
+                                <state key="normal" title="2">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="11" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
+                                <rect key="frame" x="256" y="384" width="120" height="30"/>
+                                <size key="titleShadowOffset" width="-1" height="0"/>
+                                <color key="backgroundColor" colorSpace="calibratedWhite" white="0.333333333333333" alpha="1"/>
+                                <state key="normal" title="3">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="12" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
+                                <rect key="frame" x="256" y="422" width="120" height="30"/>
+                                <size key="titleShadowOffset" width="-1" height="0"/>
+                                <color key="backgroundColor" colorSpace="calibratedWhite" white="0.333333333333333" alpha="1"/>
+                                <state key="normal" title="4">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="13" translatesAutoresizingMaskIntoConstraints="NO" misplaced="YES">
+                                <rect key="frame" x="256" y="460" width="120" height="30"/>
+                                <size key="titleShadowOffset" width="-1" height="0"/>
+                                <color key="backgroundColor" colorSpace="calibratedWhite" white="0.333333333333333" alpha="1"/>
+                                <state key="normal" title="5">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Wybierz zgłoszenie" lineBreakMode="tailTruncation" minimumFontSize="10" id="48" translatesAutoresizingMaskIntoConstraints="NO" textAlignment="center" misplaced="YES">
+                                <rect key="frame" x="242" y="260.5" width="148.5" height="20.5"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint id="14" firstItem="3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX"/>
+                            <constraint id="15" firstItem="6" firstAttribute="centerX" secondItem="3" secondAttribute="centerX"/>
+                            <constraint id="16" firstItem="11" firstAttribute="centerX" secondItem="3" secondAttribute="centerX"/>
+                            <constraint id="17" firstItem="12" firstAttribute="centerX" secondItem="3" secondAttribute="centerX"/>
+                            <constraint id="18" firstItem="13" firstAttribute="centerX" secondItem="3" secondAttribute="centerX"/>
+                            <constraint id="19" firstItem="6" firstAttribute="leading" secondItem="3" secondAttribute="leading"/>
+                            <constraint id="20" firstItem="11" firstAttribute="leading" secondItem="3" secondAttribute="leading"/>
+                            <constraint id="21" firstItem="12" firstAttribute="leading" secondItem="3" secondAttribute="leading"/>
+                            <constraint id="22" firstItem="13" firstAttribute="leading" secondItem="3" secondAttribute="leading"/>
+                            <constraint id="23" firstItem="3" firstAttribute="trailing" secondItem="6" secondAttribute="trailing"/>
+                            <constraint id="24" firstItem="3" firstAttribute="trailing" secondItem="11" secondAttribute="trailing"/>
+                            <constraint id="25" firstItem="3" firstAttribute="trailing" secondItem="12" secondAttribute="trailing"/>
+                            <constraint id="26" firstItem="3" firstAttribute="trailing" secondItem="13" secondAttribute="trailing"/>
+                            <constraint id="27" firstItem="6" firstAttribute="width" secondItem="3" secondAttribute="width"/>
+                            <constraint id="28" firstItem="11" firstAttribute="width" secondItem="3" secondAttribute="width"/>
+                            <constraint id="29" firstItem="12" firstAttribute="width" secondItem="3" secondAttribute="width"/>
+                            <constraint id="30" firstItem="13" firstAttribute="width" secondItem="3" secondAttribute="width"/>
+                            <constraint id="31" firstItem="6" firstAttribute="height" secondItem="3" secondAttribute="height"/>
+                            <constraint id="32" firstItem="11" firstAttribute="height" secondItem="3" secondAttribute="height"/>
+                            <constraint id="33" firstItem="12" firstAttribute="height" secondItem="3" secondAttribute="height"/>
+                            <constraint id="34" firstItem="13" firstAttribute="height" secondItem="3" secondAttribute="height"/>
+                            <constraint id="35" firstItem="6" firstAttribute="top" secondItem="3" secondAttribute="bottom" constant="8"/>
+                            <constraint id="36" firstItem="11" firstAttribute="top" secondItem="6" secondAttribute="bottom" constant="8"/>
+                            <constraint id="37" firstItem="12" firstAttribute="top" secondItem="11" secondAttribute="bottom" constant="8"/>
+                            <constraint id="38" firstItem="13" firstAttribute="top" secondItem="12" secondAttribute="bottom" constant="8"/>
+                            <constraint id="39" firstItem="3" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="23"/>
+                            <constraint id="50" firstItem="3" firstAttribute="top" secondItem="48" secondAttribute="bottom" constant="27"/>
+                            <constraint id="51" firstItem="3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX"/>
+                            <constraint id="56" firstItem="3" firstAttribute="centerX" secondItem="48" secondAttribute="centerX"/>
+                            <constraint id="57" firstItem="6" firstAttribute="centerX" secondItem="48" secondAttribute="centerX"/>
+                            <constraint id="58" firstItem="11" firstAttribute="centerX" secondItem="48" secondAttribute="centerX"/>
+                            <constraint id="59" firstItem="12" firstAttribute="centerX" secondItem="48" secondAttribute="centerX"/>
+                            <constraint id="60" firstItem="13" firstAttribute="centerX" secondItem="48" secondAttribute="centerX"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="notificationButton1" destination="3" id="name-outlet-3"/>
+                        <outlet property="notificationButton2" destination="6" id="name-outlet-6"/>
+                        <outlet property="notificationButton3" destination="11" id="name-outlet-11"/>
+                        <outlet property="notificationButton4" destination="12" id="name-outlet-12"/>
+                        <outlet property="notificationButton5" destination="13" id="name-outlet-13"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="0.0" y="0.0"/>
+        </scene>
+    </scenes>
 </document>
